--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -69,7 +69,7 @@
   margin-left: 0.5rem;
 }
 
-.albums {
+.photos {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 2px;
@@ -91,7 +91,7 @@
   margin-top: -20px;
 }
 @media (max-width: 992px) {
-  .albums {
+  .photos {
     grid-template-columns: repeat(3, 1fr);
   }
   .title {
@@ -106,7 +106,7 @@
   }
 }
 @media (max-width: 768px) {
-  .albums {
+  .photos {
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -119,7 +119,7 @@
 }
 
 @media (max-width: 576px) {
-  .albums {
+  .photos {
     grid-template-columns: repeat(1, 1fr);
   }
   .appTitle {
